--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -5,11 +5,11 @@ Unos 50 años después, allá por 1917, \textit{Gaston Julia} y \textit{Pierre F
 
 Fueron estos avances los que sirvieron de inspiración a \textit{Benoit Mandelbrot}, quien a partir de 1975 con sus trabajos, y en especial su libro \textit{The fractal geometry of nature} \cite{Mandelbrot} creó lo que hoy conocemos como `Geometría Fractal'. A partir de este momento los científicos con ayuda de los primeros computadores consiguieron visualizar lo que los pioneros ya intuyen.
 
-Desde entonces, científicos como \textit{Michael Barnsley} o \textit{Kenneth Falconer} desarrollan teorías como los sistemas de funciones iteradas, los cuales con ayuda del ordenador suponen una revolución en la geometría fractal, con aportes como el \textit{teorema del collage}, que tiene aplicaciones en ámbitos de la matemática más allá de los fractales. 
+Desde entonces, científicos como \textit{Michael Barnsley} o \textit{Kenneth Falconer} desarrollan teorías como los sistemas de funciones iteradas, los cuales con ayuda del ordenador suponen una revolución en la geometría fractal, con aportes como el \textit{teorema del collage}, que tiene aplicaciones en ámbitos de la matemática más allá de los fractales.
 
-Más tarde aparecerían las primeras gráficas modernas y la informática gráfica. El método más primitivo de visualizar escenas tridimensionales en pantallas, que son objetos de dos dimensiones, es el conocido como `rasterización'. Este método consiste en considerar cada objeto de la escena y calcular y colorear los píxeles donde se proyecta. 
+Más tarde apareció la Informática Gráfica (la rama de la Informática que trata, entre otras cosas, sobre la generación de imágenes por ordenador) y posteriormente se popularizó el uso de las Unidades de Procesamiento Gráfico (GPUs, por Graphics Processing Units): un componente hardware caracterizado por su alta capacidad de cálculo paralelo en coma flotante, que se encuentra disponible en todos los ordenadores y dispositivos móviles en la actualidad. El método más primitivo de visualizar escenas tridimensionales en pantallas, que son objetos de dos dimensiones, es el conocido como `rasterización'. Este método consiste en considerar cada objeto de la escena y calcular y colorear los píxeles donde se proyecta. 
 
-No fue hasta la década de 1980 cuando apareció el concepto de `emisión de rayos' en la computación gráfica. Esta sería la semilla de la costosa, pero productiva técnica de generación de imágenes que conocemos como `Ray-Tracing', en la cual, al contrario de la rasterización, consideramos cada píxel de la pantalla e identificamos los objetos que se proyectan en dicho pixel. Gracias a esta técnica, la visualización por ordenador de fractales incluso en tres dimensiones llega a su auge, con trabajos como los de \textit{John Hart}, \textit{Keenan Crane} o \textit{Íñigo Quilez} en las décadas de 1990 y 2000.
+No fue hasta la década de 1980 cuando apareció el concepto de `emisión de rayos' en la informática gráfica. Esta sería la semilla de la costosa, pero productiva técnica de generación de imágenes que conocemos como `Ray-Tracing', en la cual, al contrario de la rasterización, consideramos cada píxel de la pantalla e identificamos los objetos que se proyectan en dicho pixel. Gracias a esta técnica, la visualización por ordenador de fractales incluso en tres dimensiones llega a su auge, con trabajos como los de \textit{John Hart}, \textit{Keenan Crane} o \textit{Íñigo Quilez} en las décadas de 1990 y 2000.
 
 A día de hoy, con la revolución tecnológica en la que nos vemos sumidos en la actualidad, toda la teoría fractal está en explotación, tanto en el ámbito informático como en el puramente matemático.
 
@@ -17,19 +17,19 @@ Existen revistas, catalogadas como `JCR' (Journal Citation Reports), que tienen 
 
 La geometría fractal y el teorema del collage también han inspirado el desarrollo de herramientas de trabajo en otras áreas de las matemáticas. Ejemplo de ello es el artículo titulado \textit{Solving Parameter Identification Problems using the Collage Distance and Entropy} \cite{LaTorre}, con fecha de 2021. En la revista `Fractals' podemos también encontrar un artículo de 2019 llamado \textit{Self-similarity of solutions to integral and differential equations with respect to a fractal measure} \cite{LaTorre2019}, que relaciona geometría fractal y ecuaciones diferenciales.
 
-Por su parte, la revolución informática afecta en particular a las tarjetas gráficas.  En 2020 NVIDIA lanzó al mercado la serie `GeForce RTX 30'. Por ejemplo, la NVIDIA GeForce RTX 3050, que es de los últimos modelos, ofrece núcleos de Ray Tracing dedicados y emplea tecnologías de inteligencia artificial.
+Por su parte, la revolución informática afecta en particular a las GPUs.  En 2020 NVIDIA lanzó al mercado la serie `GeForce RTX 30'. Por ejemplo, la NVIDIA GeForce RTX 3050, que es de los últimos modelos, ofrece núcleos de Ray Tracing dedicados y emplea tecnologías de inteligencia artificial.
 
-Sobre esto, la última tendencia en computación gráfica, y particularmente en ray-tracing, es aplicar `Deep Learning' en la síntesis de imágenes por ordenador. En contraste con la tradicional forma de programar potentes algoritmos para graficar imágenes lo más realistas posibles, el uso de redes neuronales en muchas situaciones ofrece resultados incluso mejores. Es por esto que este es un campo abierto a día de hoy en informática gráfica. Una explicación más detallada a la par que dinámica se puede encontrar en \cite{RT-AI}.
+Sobre esto, la última tendencia en informática gráfica, y particularmente en ray-tracing, es aplicar `Deep Learning' en la síntesis de imágenes por ordenador. En contraste con la tradicional forma de programar potentes algoritmos para graficar imágenes lo más realistas posibles, el uso de redes neuronales en muchas situaciones ofrece resultados incluso mejores. Es por esto que este es un campo abierto a día de hoy en informática gráfica. Una explicación más detallada a la par que dinámica se puede encontrar en \cite{RT-AI}.
 
 Vemos que el ray tracing está muy a la orden del día, pero sólo hace unos 3 años que existen herramientas propiamente dedicadas al ray-tracing, entre las que destacan \href{https://nvpro-samples.github.io/vk_raytracing_tutorial_KHR/}{\textcolor{blue}{Vulkan con su extensión KHR}}. El principal defecto que tienen es que solo pueden ser ejecutadas en GPUs muy caras y además sólo trabajan con mallas de polígonos. La alternativa a ellas es simular el ray-tracing en herramientas de visualización estándar.
 
-Debemos también mencionar el evento \href{https://s2022.siggraph.org/}{\textcolor{blue}{Siggraph}}, que es un evento anual en el que se exponen nuevas técnicas y avances en el mundo de la computación gráfica. En su web podemos encontrar muchos papers y artículos relacionados con la generación de imágenes. Por ejemplo en la siguiente encontramos muchos textos con fecha de 2021: \url{https://kesen.realtimerendering.com/sig2021.html}.
+Debemos también mencionar el evento \href{https://s2022.siggraph.org/}{\textcolor{blue}{Siggraph}}, que es un evento anual en el que se exponen nuevas técnicas y avances en el mundo de la informática gráfica. En su web podemos encontrar muchos papers y artículos relacionados con la generación de imágenes. Por ejemplo en la siguiente encontramos muchos textos con fecha de 2021: \url{https://kesen.realtimerendering.com/sig2021.html}.
 
 Como hemos podido comprobar, la teoría de la geometría fractal es una disciplina muy estudiada e investigada incluso en la actualidad. No obstante, es muy desconocida en general, tanto para estudiantes como para profesionales de las matemáticas y la informática, a pesar de tener una muy estrecha relación con ambas ciencias. Por ello, queremos aportar a esta disciplina nuestro granito de arena para que se dé a conocer a todo el público que lo desee. 
 
 Para ello, en este documento se presenta desde el punto de vista matemático los conceptos y resultados principales de la geometría fractal, utilizando no sólo desarrollos teóricos y texto, sino combinándolos también con ejemplos, imágenes y códigos para graficarlas. De esta forma se ofrece un contenido fácil de seguir y atractivo para el lector. 
 
-Aprovechando también el hardware y software moderno junto con conocimientos en informática gráfica, se crea como producto software una web interactiva en la que visualizar fractales, tanto 2D como 3D. Esta web ofrece la posibilidad de modificar dinámicamente parámetros tanto de los propios fractales como de los algoritmos utilizados para graficarlos. Se permite también movimiento por la escena, pudiendo observar detalles de los fractales incluso a escalas pequeñas. Con esta web se desarrolla un producto que es accesible para cualquier persona que tenga acceso a internet, acercándola al mundo de los fractales.
+Aprovechando también el hardware y software moderno junto con conocimientos en informática gráfica, se crea como producto software una web interactiva en la que visualizar fractales, tanto 2D como 3D. Esta web ofrece la posibilidad de modificar dinámicamente parámetros tanto de los propios fractales como de los algoritmos utilizados para graficarlos. Se permite también movimiento por la escena, pudiendo observar detalles de los fractales incluso a escalas pequeñas. Con esta web se desarrolla un producto que es accesible para cualquier persona que tenga acceso a internet, acercándola al mundo de los fractales. La URL de la misma es \url{https://jantoniovr.github.io/Geometria-Fractal/}.
 
 Esta visualización se ha implementado utilizando técnicas avanzadas en informática gráfica, las cuales están minuciosamente introducidas y explicadas en esta memoria. Así además introducimos al lector varios conceptos y métodos de la informática gráfica, particularizando su uso a la síntesis de imágenes fractales.
 
@@ -52,7 +52,7 @@ Otro aspecto deseable es el conocimiento o uso previo de alguna herramienta de r
 
 Para el desarrollo de la web intectativa se ha utilizado naturalmente HTML5 y CSS3 (ayudado también por el framework Bootstrap). Pero la mayor parte del código del software está escrito en JavaScript, ya que es utilizado para la gestión del DOM y de los eventos en el documento HTML. Además, como herramienta de visualización se ha utilizado WebGL, que precisamente utiliza JavaScript para su gestión, de manera que lo usamos como intermediario entre el documento HTML y la gestión dinámica de eventos, pero a su vez también lo utilizamos como lenguaje para interactuar con las herramientas de WebGL.
 
-Se utiliza el lenguaje GLSL (GL Shader Language) para programar el shader de WebGL. El uso de este lenguaje es intensivo, pero tiene una sintaxis muy similar a la de C, por lo que el lector no debe preocuparse si no ha tratado nunca con GLSL, ya que entre la propia documentación oficial y lo descrito aquí será sencillo entender todo el código shader.
+Se utiliza el lenguaje GLSL (GL Shader Language) para la programación de código destinado a ejecutarse en la GPU. A las componentes de este código se les denomina `shaders'. El uso de este lenguaje es intensivo, pero tiene una sintaxis muy similar a la de C, por lo que el lector no debe preocuparse si no ha tratado nunca con GLSL, ya que entre la propia documentación oficial y lo descrito aquí será sencillo entender todo el código shader.
 
 Para graficar escenas 3D hemos utilizado la técnica conocida como `ray-tracing', identificando cada objeto con una función distancia (SDF) y aplicando el algoritmo `sphere-tracing'. Con estos elementos se ha implementado en GLSL el shader necesario para graficar las escenas en las que se pueden observar fractales 3D.
 
