--- a/memoria/tex/capitulos/planificacion-presupuestos.tex
+++ b/memoria/tex/capitulos/planificacion-presupuestos.tex
@@ -84,7 +84,7 @@ Todo el software ha sido desarrollado en un ordenador portátil personal. Las es
     \hline
     Modelo                           & HP Pavilion 15 Notebook PC                       \\ \hline
     Procesador                       & Intel Core i7-4500U                              \\ \hline
-    \multirow{2}{*}{Tarjeta gráfica} & nVidia GeForce 840M                              \\
+    \multirow{2}{*}{GPU} & nVidia GeForce 840M                              \\
                                      & Intel Haswell-ULT Integrated Graphics Controller \\ \hline
     RAM                              & 7.7 GiB                                          \\ \hline
     Sistema Operativo                & Ubuntu 20.04.2 LTS                               \\ \hline
