Cambiada redacción de los objetivos (#68)

--- a/memoria/tex/objetivos.tex
+++ b/memoria/tex/objetivos.tex
@@ -1,4 +1,4 @@
-Los objetivos iniciales de este trabajo son muy similares a los finalmente alcanzados. Muchos de ellos, fundamentalmente en la parte matemática, han sido alcanzados, mientras que en la parte informática se ha conseguido lo esencial mientras que hemos tenido que dejar algunos análisis de rendimiento. 
+Los objetivos iniciales de este trabajo son muy similares a los finalmente alcanzados. Muchos de ellos han sido alcanzados, mientras que algunos finalmente han tenido que ser descartados. 
 
 En el ámbito de las matemáticas, el objetivo inicial consistía en realizar un estudio de los fundamentos básicos de la Geometría Fractal. Para ello, se realizaría una recopilación de algunos de los conceptos y resultados necesarios, insistiendo en la teoría de la medida y el teorema del punto fijo de Banach. Se desarrollarían los elementos esenciales de la Geometría Fractal, especialmente conceptos de dimensión, como la de Hausdorff, sistemas de funciones iteradas, autosimilitud o el teorema del collage. Finalmente, se presentarían diversas aplicaciones de la Geometría Fractal, especialmente vinculadas con la naturaleza.
 
@@ -10,8 +10,8 @@ Por su parte, el teorema del punto fijo de Banach (teorema \ref{th:punto-fijo}) 
 
 Sin embargo, aunque se hacen continuas referencias a la naturaleza con objetos como un romanescu o un rayo, como en las imágenes \ref{fig:objetos} , o se hayan descrito SFIs para modelar un árbol o un helecho en las tablas \ref{tabla:arbol-pitagoras} y \ref{tabla:helecho-Barnsley}, cuyos resultados se pueden ver en las imágenes \ref{fig:atractores-sfi}; lo cierto es que no hay ningún énfasis en aplicaciones de la geometría fractal en la naturaleza. Podemos encontrar en el capítulo \ref{chap:SFI} algunas aplicaciones de la geometría fractal y del teorema del collage, pero realmente no existen explicaciones minuciosas. Esto se debe a que estos cuatro capítulos desarrollados se han considerado suficientes para completar los créditos y los objetivos fundamentales de un proyecto de estas características. No obstante, si el lector lo desea puede encontrar en \cite{Mandelbrot} una gran cantidad de relaciones entre la naturaleza y la geometría fractal.
 
-Por parte de informática, es cierto que no ha sido posible completar totalmente los objetivos, ya que al haber codificado todo sin ningún tipo de ayuda de ningún framework, la programación y sobre todo el depurado de errores en GLSL se vuelve muy complicado. Así, los objetivos iniciales consistían en estudiar diversos algoritmos conocidos para visualización de fractales en 2D y 3D, especialmente aquellos basados en Ray-tracing en 3D. Tras esto, se realizaría un análisis de sus características, con énfasis en la eficiencia en tiempo. Estos algoritmos se diseñarían e implementarían usando hardware gráfico moderno, y se evaluarían los resultados obtenidos en cuanto a tiempo de cálculo y funcionalidad ofrecida.
+En relación a los objetivos y contenidos de informática, los objetivos iniciales consistían en estudiar diversos algoritmos conocidos para visualización de fractales en 2D y 3D, especialmente aquellos basados en Ray-tracing en 3D. Tras esto, se realizaría un análisis de sus características, con énfasis en la eficiencia en tiempo. Estos algoritmos se diseñarían e implementarían usando hardware gráfico moderno, y se evaluarían los resultados obtenidos en cuanto a tiempo de cálculo y funcionalidad ofrecida.
 
-Hemos conseguido programar distintos algoritmos para visualizar distintos fractales, partiendo de los algoritmos base que se describieron en el capítulo \ref{chap:Julia-Mandelbrot}: los algoritmos \ref{alg:Julia} y \ref{alg:Mandelbrot}. A partir de ellos describimos en el capítulo \ref{chap:fractales-2D} cómo graficar fractales 2D utilizando WebGL. Seguidamente empezamos a codificar una aplicación que utilice ray-tracing para visualizar una escena 3D sencilla, para una vez completada implementar algoritmos de visualización de fractales con ray-tracing. Esta tarea fue muy compleja y costosa, prueba de ello es que tan solo los capítulos \ref{chap:ray-tracing} y \ref{chap:fractales-3D}, correspondientes a introducción al ray-tracing y a visualización de fractales 3D, ocupan aproximadamente 70 páginas. La bibliografía sobre esta materia es bastante escasa y en muchas ocasiones ambigua, sin olvidar lo difícil que es depurar un código shader, por lo que fue muy costoso completar esta tarea.
+Hemos conseguido programar varios algoritmos para visualizar distintos fractales, partiendo de los que se describieron en el capítulo \ref{chap:Julia-Mandelbrot}: los algoritmos \ref{alg:Julia} y \ref{alg:Mandelbrot}. A partir de ellos describimos en el capítulo \ref{chap:fractales-2D} cómo graficar fractales 2D utilizando WebGL. Seguidamente empezamos a codificar una aplicación que utilice ray-tracing para visualizar una escena 3D sencilla, para una vez completada implementar algoritmos de visualización de fractales con ray-tracing. Esta tarea fue muy compleja y costosa, prueba de ello es que tan solo los capítulos \ref{chap:ray-tracing} y \ref{chap:fractales-3D}, correspondientes a introducción al ray-tracing y a visualización de fractales 3D, ocupan aproximadamente 70 páginas. La bibliografía sobre esta materia es bastante escasa y en muchas ocasiones ambigua, además de la dificultad que supone depurar código shader, por lo que fue muy costoso completar esta tarea.
 
-Por ello, las tareas de análisis de rendimientos han tenido que ser descartadas, pues por falta de tiempo no fue posible hacer pruebas sobre tiempo de cálculo.
+Los objetivos relativos a la eficiencia en tiempo también se han logrado alcanzar. Aunque queda pendiente un análisis más profundo de la comparativa existente entre una ejecución de este código en GPU respecto al uso de una versión equivalente totalmente ejecutada en CPU, lo cierto es que con el código desarrollado es posible visualizar fractales 2D y 3D en tiempos del orden de milisegundos, los cuales son imposibles de conseguir con código ejecutado exclusivamente en la CPU.
