Cambio en la organización de los capítulos (#68)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -139,35 +139,30 @@
 
 \import{tex/capitulos/}{capitulo-4.tex}
 
-\chapter*{Desarrollo del Software: Planificación y presupuesto}
-\label{chap:planificacion-presupuesto}
-
-\import{tex/capitulos/}{planificacion-presupuestos.tex}
-
-\chapter*{Desarrollo del Software: Análisis y diseño}
-\label{chap:analisis-diseno}
-
-\import{tex/capitulos/}{analisis-diseno.tex}
-
 \chapter{Introducción a las herramientas de visualización}
 \label{chap:visualizacion}
 
 \import{tex/capitulos/}{capitulo-5.tex}
 
+\chapter{Planificación y Análisis del Software}
+\label{chap:planificacion-analisis}
+
+\import{tex/capitulos/}{capitulo-6.tex}
+
 \chapter{Visualización de fractales en 2D.}
 \label{chap:fractales-2D}
 
-\import{tex/capitulos/}{capitulo-6.tex}
+\import{tex/capitulos/}{capitulo-7.tex}
 
 \chapter{Introducción al \textit{Ray-Tracing}.}
 \label{chap:ray-tracing}
 
-\import{tex/capitulos/}{capitulo-7.tex}
+\import{tex/capitulos/}{capitulo-8.tex}
 
 \chapter{Visualización de fractales en 3D.}
 \label{chap:fractales-3D}
 
-\import{tex/capitulos/}{capitulo-8.tex}
+\import{tex/capitulos/}{capitulo-9.tex}
 
 \chapter*{Conclusiones}
 \addcontentsline{toc}{chapter}{Conclusiones}
