Cambiada planificacion a unidades de semana (#68)

--- a/memoria/tex/capitulos/capitulo-6.tex
+++ b/memoria/tex/capitulos/capitulo-6.tex
@@ -6,13 +6,13 @@ Hasta el momento hemos introducido la materia matemática básica de esta discip
 
 \section{Planificación}
 
-A continuación describiremos la planificación temporal por fases de este producto software. Debe tenerse en cuenta que con cada avance hay asociado un tiempo de codificación de la funcionalidad, pero también un tiempo buscando información, consultando bibliografía y redactando la documentación del software.
+A continuación describiremos la planificación temporal por fases de este producto software. Debe tenerse en cuenta que con cada avance hay asociado un tiempo de codificación de la funcionalidad, pero también un tiempo buscando información, consultando bibliografía y redactando la documentación del software. El desarrollo del software comienza a la par que el periodo lectivo correspondiente al segundo cuatrimestre del curso universitario 2021-2022, por lo que dividiremos el tiempo que transcurre desde el 7 de febrero de 2022 hasta la fecha de entrega, que es el 20 de junio de 2022, en 20 semanas, cada una identificada por la fecha del lunes de dicha semana. Utilizaremos estas unidades y fechas para describir los tiempos empleados en cada fase de desarrollo, las cuales procedemos a describir en las siguientes subsecciones.
 
 \subsection{Infraestructura básica}
 
-La fase de desarrollo comienza a principios de Febrero de 2022, digamos el día 8. El primer paso es conseguir una web vacía con un elemento tipo `canvas' en el cual visualicemos algo sencillo, como por ejemplo un cuadrado de colores.
+La fase de desarrollo comienza en la segunda semana de febrero de 2022, que da comienzo el día 7 de este mismo mes. El primer paso es conseguir una web vacía con un elemento tipo `canvas' en el cual visualicemos algo sencillo, como por ejemplo un cuadrado de colores.
 
-Esta tarea es sencilla, ya que hay muchos tutoriales, es el `hello world' de las aplicaciones gráficas. Debe estar lista antes del día \textbf{11 de Febrero de 2022}.
+Esta tarea es sencilla, ya que hay muchos tutoriales, es el `hello world' de las aplicaciones gráficas. Debe estar lista en esta misma semana, es decir, antes de acabar la \textbf{semana 1}, la cual transcurre desde el 7 hasta el 13 de febrero.
 
 Con esto, ya tenemos la infraestructura básica del producto software.
 
@@ -22,7 +22,7 @@ Con el código hasta ahora, debemos modificar la estructura para que el software
 
 Seguidamente, debemos preparar el documento web para el soporte de interactividad y gestión de eventos. Es decir, añadir formularios, botones, deslizadores... en principio sin funcionalidad alguna. Hecho esto, añadimos definitivamente la interactividad, permitiendo que a partir del documento web se pueda interactuar con el canvas y la escena que se está visualizando. Con cada avance en el desarrollo debe cuidarse la apariencia y el estilo de la web.
 
-En este punto, el producto consiste en una web interactiva para visualizar fractales en 2D. Esta tarea no es tampoco demasiado compleja al ser sencillo identificar un canvas 2D con una región del plano sencilla, pero requiere mucha funcionalidad muy distinta, la cual es la primera vez que se programa, y teniendo en cuenta que es una parte importante del proyecto que servirá de base para el resto de fases, estipulamos que debemos dar como margen hasta el \textbf{25 de Marzo de 2022}.
+En este punto, el producto consiste en una web interactiva para visualizar fractales en 2D. Esta tarea no es tampoco demasiado compleja al ser sencillo identificar un canvas 2D con una región del plano sencilla, pero requiere mucha funcionalidad muy distinta, la cual es la primera vez que se programa, y teniendo en cuenta que es una parte importante del proyecto que servirá de base para el resto de fases, estipulamos que debemos dar como margen hasta la \textbf{semana 8}, es decir, entre el lunes 7 de febrero y el domingo 3 de abril de 2022.
 
 \subsection{Construcción de un programa ray-tracer}
 
@@ -32,7 +32,7 @@ El primer paso para tener una web en la que visualizar una escena con fractales 
 
 A la par, debemos seguir cuidando tanto el estilo del documento web como la posibilidad de interactuar con la página. Por suerte, a partir del código ya desarrollado en la anterior fase, esta tarea se facilita considerablemente respecto a las primeras veces.
 
-Este programa requiere programar el propio ray-tracing, formas de calcular las intersecciones de los rayos con los objetos, llenar de objetos la escena, parametrizar la posición de la cámara e implementar el modelo de iluminación. La tarea es generalmente compleja, pero está muy basada en el código ya implementado para fractales 2D, por lo que estimamos que debe estar programada para el día \textbf{22 de Abril de 2022}.
+Este programa requiere programar el propio ray-tracing, formas de calcular las intersecciones de los rayos con los objetos, llenar de objetos la escena, parametrizar la posición de la cámara e implementar el modelo de iluminación. La tarea es generalmente compleja, pero está muy basada en el código ya implementado para fractales 2D, por lo que estimamos que debe estar programada para la \textbf{semana 12}, que finaliza el domingo 1 de mayo de 2022.
 
 \subsection{Visualización de fractales en 3D}
 
@@ -41,7 +41,7 @@ Esta aunque no es la última fase del desarrollo del producto, probablemente sí
 Esta fase requiere, además de código, mucho tiempo de búsqueda y consulta bibliográfica. Una vez adquiridos conocimientos necesarios haremos las modificaciones oportunas a las regiones de código necesarias al programa que tenemos hasta ahora con el objetivo de visualizar los fractales en 3D.
 Al igual que en todas las fases, debemos ir añadiendo parámetros modificables a la web y cuidar el estilo.
 
-Una vez realizado esto, contaríamos con una web en la que interactuar con fractales 2D o 3D, pudiendo visualizar de forma concreta y sencilla estas singulares figuras. Esto finalizaría la parte más compleja y también la más necesaria del proyecto, pues es la que cumple el objetivo fundamental. Estipulamos por tanto que debe estar lista alrededor del día \textbf{13 de Mayo de 2022}.
+Una vez realizado esto, contaríamos con una web en la que interactuar con fractales 2D o 3D, pudiendo visualizar de forma concreta y sencilla estas singulares figuras. Esto finalizaría la parte más compleja y también la más necesaria del proyecto, pues es la que cumple el objetivo fundamental. Estipulamos por tanto que debe estar lista en la \textbf{semana 15}, es decir, antes del domingo 22 de mayo.
 
 \subsection{Realismo y optimización en la escena 3D}
 
@@ -51,13 +51,13 @@ El problema es que estas dos adiciones son muy costosas en tiempo, lo cual compr
 
 Seguidamente podemos añadir esferas englobantes al programa como técnica de optimización, al menos en escenas donde el fractal esté relativamente lejano.
 
-Estas modificaciones completarían el desarrollo software de la visualización e interacción de la escena y en lo que a `backend' se refiere completa el software. Debe estar lista el \textbf{1 de Junio de 2022}.
+Estas modificaciones completarían el desarrollo software de la visualización e interacción de la escena y en lo que a `backend' se refiere completa el software. Debe estar lista durante la \textbf{semana 18}, que finaliza el domingo 12 de junio.
 
 \subsection{Añadir estilo y UX a la web}
 
 Desde el inicio, al estar en fases de desarrollo, hemos descuidado bastante la apariencia de la página en lo que a secciones, fuentes y colores se refiere. Por tanto, añadiremos estilo y código CSS al documento para darle una apariencia más visual y amigable.
 
-La última, pero no por ello menos importante fase del desarrollo debe estar finalizada el día de la entrega, que es el \textbf{20 de Junio de 2022}.
+La última, pero no por ello menos importante fase del desarrollo debe estar finalizada la misma semana que se produce la entrega, es decir, la \textbf{semana 20} y por supuesto antes del día \textbf{20 de Junio de 2022}.
 
 \vspace{0.5cm}
 
