Añado paquete para usar el icono del euro '€' (#68)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -21,7 +21,7 @@
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{booktabs}
-\usepackage{xcolor}
+\usepackage[usenames, dvipsnames]{xcolor}
 \usepackage{listings}
 \usepackage{hyperref}
 \usepackage{array}
@@ -30,6 +30,7 @@
 \usepackage{algpseudocode}
 \usepackage{tikz}
 \usepackage{multirow}
+\usepackage{eurosym}
 \usepackage[spanish, es-tabla]{babel}
 \decimalpoint
 
